# agentapi

./: .coderabbit.yaml  .cursorignore  .env  .env.example  .gitignore  .gitmodules  .golangci.yml  .llmignore  .pre-commit-config.yaml  00_START_HERE.md  ADR.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  COMPARISON.md  CONTRIBUTING.md  FUNCTIONAL_REQUIREMENTS.md  INTEGRATION_SUMMARY.md  MAINTAINERS.md  MANIFEST.in  Makefile  PLAN.md  PRD.md  PYTHON_PACKAGE.md  README.md  SECURITY.md  SPEC.md  WARP.md  WORKLOG.md  actionlint.yaml  agents.toml  coverage.out  go.mod  go.sum  openapi.json  pyproject.toml  test_package.py
.codex/prompts/: spec-kitty.accept.md
.cursor/commands/: spec-kitty.accept.md
.gemini/: config.yaml
.gemini/commands/: spec-kitty.accept.toml  (+13 more)
.github/: CODEOWNERS  RULESET_BASELINE.md  WORKFLOW.md  copilot-instructions.md  dependabot.yml  pull_request_template.md  release-drafter.yml
.kittify/: .dashboard  config.yaml  metadata.yaml
.semgrep-rules/: architecture-violations.yml  secrets-detection.yml  unsafe-patterns.yml
.serena/: project.yml
agentapi-plusplus/: .coderabbit.yml  .gitignore  ADR.md  AGENTS.md  ARCHIVED.md  ARCHIVED.md.zst  TEST_SUMMARY.md  TYPESCRIPT_MINIMIZATION.md  Taskfile.yml  WORKLOG.md
chat/: index.html  index.txt  package-lock.json  package.json  pnpm-lock.yaml
cmd/: root.go
config/: phenotype.toml
docs/: .npmrc  FUNCTIONAL_REQUIREMENTS.md  PRD.md  README.md  SPEC.md  WORKLOG.md  index.md  package-lock.json  package.json
e2e/: acp_echo.go  echo.go  echo_test.go
lib/: index.ts
scripts/: agentapi-sync  quality-gate.sh  self-merge-gate.sh  validate_openapi_agent_client_module.sh
test/: agent_coverage_test.go
(+294 files in other folders)
